[package]
description = "OpenEthereum EVM Implementation"
name = "evmfuzz"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
account-state = { path = "../ethcore/account-state" }
common-types = { path = "../ethcore/types", features = ["test-helpers"] }
docopt = "1.0"
env_logger = "0.5"
machine = { path = "../ethcore/machine" }
ethcore = { path = "../ethcore", features = ["test-helpers", "json-tests"] }
ethereum-types = "0.9.0"
ethjson = { path = "../json", features = ["test-helpers"] }
evm = { path = "../ethcore/evm" }
panic_hook = { path = "../util/panic-hook" }
parity-bytes = "0.1"
pod = { path = "../ethcore/pod" }
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spec = { path = "../ethcore/spec" }
trace = { path = "../ethcore/trace" }
vm = { path = "../ethcore/vm" }

# FUZZ FUZZ
lazy_static = "1.4.0"
bitreader = "0.3.2"
protobuf = "2.14.0"
rand = "0.7.3"
rand_xorshift = "0.2.0"

strum = "0.18.0"
strum_macros = "0.18.0"

[dev-dependencies]
criterion = "0.3"
hex-literal = "0.2.1"
tempfile = "3.1"

[features]
evm-debug = ["ethcore/evm-debug-tests"]
